[gd_scene load_steps=21 format=3 uid="uid://biqvbf15aow1f"]

[ext_resource type="Script" uid="uid://ykulnhi7ev2a" path="res://scripts/score_hud.gd" id="1_a6map"]
[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="1_oksiu"]
[ext_resource type="Script" uid="uid://dkbmefpfu2a4y" path="res://scripts/v_box_container_input_passthrough.gd" id="1_sgilr"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybgg2" path="res://objects/fps_player.tscn" id="1_xpi2j"]
[ext_resource type="PackedScene" uid="uid://cnymdajj1vsqm" path="res://objects/platform.tscn" id="4_ot723"]
[ext_resource type="PackedScene" uid="uid://rjh4ifidqrfp" path="res://objects/platform_medium.tscn" id="5_r863s"]
[ext_resource type="PackedScene" uid="uid://c8up71en5djgm" path="res://objects/platform_falling.tscn" id="6_1kggl"]
[ext_resource type="PackedScene" uid="uid://uqr4hswv6d2g" path="res://objects/platform_grass_large_round.tscn" id="7_e6bvh"]
[ext_resource type="Script" uid="uid://bh0s3u5xokpo4" path="res://scripts/spawn_point.gd" id="7_pw7qi"]
[ext_resource type="PackedScene" uid="uid://84rx62v6cb2y" path="res://objects/flag.tscn" id="8_o0832"]
[ext_resource type="PackedScene" uid="uid://dfpisimsgf5ce" path="res://objects/platformer/coin.tscn" id="9_3ty3t"]
[ext_resource type="PackedScene" uid="uid://dy017k58p20sk" path="res://objects/cloud.tscn" id="10_e4ksv"]
[ext_resource type="Script" uid="uid://cp1ic67oqpvir" path="res://scripts/hud.gd" id="11_aqt6k"]
[ext_resource type="Texture2D" uid="uid://cd7oyc56ehkx1" path="res://sprites/coin.png" id="12_vpaey"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="13_twobp"]

[sub_resource type="LabelSettings" id="LabelSettings_v8ptp"]
font = ExtResource("13_twobp")
font_size = 48
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_a6map"]
font = ExtResource("13_twobp")
font_size = 60
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_38ys3"]
font = ExtResource("13_twobp")
font_size = 48
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_xpi2j"]
font = ExtResource("13_twobp")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[sub_resource type="BoxShape3D" id="BoxShape3D_pw7qi"]

[node name="Main" type="Node3D"]

[node name="ScoreHUD" type="CanvasLayer" parent="." node_paths=PackedStringArray("player", "player_2")]
script = ExtResource("1_a6map")
player = NodePath("../VBoxContainer/SubViewportContainer/SubViewport/FPSPlayer")
player_2 = NodePath("../VBoxContainer/SubViewportContainer2/SubViewport/FPSPlayer 2")

[node name="ScoreContainer" type="HBoxContainer" parent="ScoreHUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_top = 12.0
offset_right = 103.0
offset_bottom = 68.0
grow_horizontal = 2
alignment = 1

[node name="PlayerScore" type="Label" parent="ScoreHUD/ScoreContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_v8ptp")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Separator" type="Control" parent="ScoreHUD/ScoreContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="GameTimerLabel" type="Label" parent="ScoreHUD/ScoreContainer"]
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_a6map")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GameTimer" type="Timer" parent="ScoreHUD/ScoreContainer/GameTimerLabel"]
wait_time = 180.0
autostart = true

[node name="Separator2" type="Control" parent="ScoreHUD/ScoreContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Player2Score" type="Label" parent="ScoreHUD/ScoreContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_v8ptp")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="." node_paths=PackedStringArray("player_1")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
alignment = 1
script = ExtResource("1_sgilr")
player_1 = NodePath("SubViewportContainer/SubViewport/FPSPlayer")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
handle_input_locally = false
audio_listener_enable_3d = true
size = Vector2i(1920, 540)
render_target_update_mode = 4

[node name="FPSPlayer" parent="VBoxContainer/SubViewportContainer/SubViewport" node_paths=PackedStringArray("root_node", "spawn_points", "crosshair") instance=ExtResource("1_xpi2j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.165161, 0.45, -0.00104237)
root_node = NodePath("..")
rotation_target = Vector3(0, 1.174, 0)
spawn_points = [NodePath("../SpawnPoints/Node3D"), NodePath("../SpawnPoints/Node3D2"), NodePath("../SpawnPoints/Node3D3"), NodePath("../SpawnPoints/Node3D4")]
crosshair = NodePath("../HUD/Crosshair")

[node name="HUD" type="CanvasLayer" parent="VBoxContainer/SubViewportContainer/SubViewport"]
script = ExtResource("11_aqt6k")

[node name="Icon" type="TextureRect" parent="VBoxContainer/SubViewportContainer/SubViewport/HUD"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("12_vpaey")
metadata/_edit_use_anchors_ = true

[node name="x" type="Label" parent="VBoxContainer/SubViewportContainer/SubViewport/HUD"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "Ã—"
label_settings = SubResource("LabelSettings_38ys3")
metadata/_edit_use_anchors_ = true

[node name="Coins" type="Label" parent="VBoxContainer/SubViewportContainer/SubViewport/HUD"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="TextureRect" parent="VBoxContainer/SubViewportContainer/SubViewport/HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)

[node name="Health" type="Label" parent="VBoxContainer/SubViewportContainer/SubViewport/HUD"]
offset_left = 48.0
offset_top = 291.0
offset_right = 138.0
offset_bottom = 336.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_xpi2j")
vertical_alignment = 2

[node name="Environment" type="WorldEnvironment" parent="VBoxContainer/SubViewportContainer/SubViewport"]
environment = ExtResource("1_oksiu")

[node name="Sun" type="DirectionalLight3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.422618, -0.694272, 0.582564, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="SpawnPoints" type="Node3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8586, 1.54194, 0.544944)

[node name="Node3D" type="Area3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8586, -1.04194, -0.544944)
collision_layer = 0
script = ExtResource("7_pw7qi")
player_2_allowed = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501083, 0)
shape = SubResource("BoxShape3D_pw7qi")

[node name="Node3D2" type="Area3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.558842, -0.0510831, -0.544944)
collision_layer = 0
script = ExtResource("7_pw7qi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501083, 0)
shape = SubResource("BoxShape3D_pw7qi")

[node name="Node3D3" type="Area3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2743, -0.993024, 4.39598)
collision_layer = 0
script = ExtResource("7_pw7qi")
player_2_allowed = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501083, 0)
shape = SubResource("BoxShape3D_pw7qi")

[node name="Node3D4" type="Area3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.93191, -0.0430242, -3.49398)
collision_layer = 0
script = ExtResource("7_pw7qi")
player_allowed = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501083, 0)
shape = SubResource("BoxShape3D_pw7qi")

[node name="World" type="Node3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]

[node name="platform" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("4_ot723")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, 0, 0, 0)

[node name="platform4" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("4_ot723")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, -15, 0, 4)

[node name="platform2" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("4_ot723")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, -3)

[node name="platform3" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("4_ot723")]
transform = Transform3D(0.966237, 0, -0.257656, 0, 1, 0, 0.257656, 0, 0.966237, -3, 3, -5)

[node name="platform-medium" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("5_r863s")]
transform = Transform3D(0.996134, 0, 0.0878512, 0, 1, 0, -0.0878512, 0, 0.996134, -3, 0, 0)

[node name="platform-medium2" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("5_r863s")]
transform = Transform3D(0.995121, 0, 0.0986598, 0, 1, 0, -0.0986598, 0, 0.995121, -5, 0, 4)

[node name="platform-medium4" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("5_r863s")]
transform = Transform3D(0.929796, 0, -0.368076, 0, 1, 0, 0.368076, 0, 0.929796, -14.9422, 0.991941, 0.128304)

[node name="platform-medium3" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("5_r863s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -6)

[node name="platform-falling" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("6_1kggl")]
transform = Transform3D(0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, -9, 0.419294, 4)

[node name="platform-falling2" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("6_1kggl")]
transform = Transform3D(0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, -12, -0.315063, 4)

[node name="platform-falling3" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("6_1kggl")]
transform = Transform3D(0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -11.7527, 1.8303, -2.30579)

[node name="platform-grass-large-round" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("7_e6bvh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, -2)

[node name="flag" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("8_o0832")]
transform = Transform3D(0.705711, 0, -0.7085, 0, 1, 0, 0.7085, 0, 0.705711, 0.0326405, 3.5, -6.04442)
transition_to = "uid://do6r3r3j8ac8x"

[node name="coin" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.635, 0)

[node name="coin10" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.635, 4)

[node name="coin2" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0437, 1.97005, -0.33003)

[node name="coin3" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0437, 1.97005, -1.33003)

[node name="coin5" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7731, 2.54941, -2.28223)

[node name="coin6" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8111, 1.6888, 0.328574)

[node name="coin7" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8111, 2.6888, 0.328574)

[node name="coin8" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.9647, 0.801836, 3.99354)

[node name="coin9" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -6)

[node name="coin4" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("9_3ty3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0437, 1.97005, -2.33003)

[node name="cube8" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5495, 1.10741, -2.666)

[node name="cube9" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(1.27593, -0.401864, 0.422933, 0.471408, 1.30937, -0.178025, -0.343721, 0.304009, 1.32582, 3.33538, 1.37146, -4.1932)

[node name="cube10" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(1.32811, 0.370441, 0.259369, -0.293866, 1.3186, -0.37854, -0.34372, 0.30401, 1.32582, -10.5752, 2.03819, -7.93707)

[node name="cube11" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(0.476646, 0.924607, 0.941422, -0.929853, 0.945559, -0.457882, -0.93624, -0.468385, 0.934042, -11.1815, 2.03819, 9.2812)

[node name="cube12" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -10.9158, 2.79508, 11.515)

[node name="cube13" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -14.3045, 2.03819, -8.24191)

[node name="cube14" parent="VBoxContainer/SubViewportContainer/SubViewport/World" instance=ExtResource("10_e4ksv")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -15.866, 2.03819, 7.83702)

[node name="SubViewportContainer2" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer2"]
handle_input_locally = false
audio_listener_enable_3d = true
size = Vector2i(1920, 540)
render_target_update_mode = 4

[node name="FPSPlayer 2" parent="VBoxContainer/SubViewportContainer2/SubViewport" node_paths=PackedStringArray("root_node", "spawn_points", "crosshair") instance=ExtResource("1_xpi2j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.28399, 1.45, -1.69694)
player_2 = true
root_node = NodePath("..")
rotation_target = Vector3(0, 10.956, 0)
spawn_points = [NodePath("../../../SubViewportContainer/SubViewport/SpawnPoints/Node3D"), NodePath("../../../SubViewportContainer/SubViewport/SpawnPoints/Node3D2"), NodePath("../../../SubViewportContainer/SubViewport/SpawnPoints/Node3D3"), NodePath("../../../SubViewportContainer/SubViewport/SpawnPoints/Node3D4")]
crosshair = NodePath("../HUD/Crosshair")

[node name="HUD" type="CanvasLayer" parent="VBoxContainer/SubViewportContainer2/SubViewport"]
script = ExtResource("11_aqt6k")

[node name="Icon" type="TextureRect" parent="VBoxContainer/SubViewportContainer2/SubViewport/HUD"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("12_vpaey")
metadata/_edit_use_anchors_ = true

[node name="x" type="Label" parent="VBoxContainer/SubViewportContainer2/SubViewport/HUD"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "Ã—"
label_settings = SubResource("LabelSettings_38ys3")
metadata/_edit_use_anchors_ = true

[node name="Coins" type="Label" parent="VBoxContainer/SubViewportContainer2/SubViewport/HUD"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="TextureRect" parent="VBoxContainer/SubViewportContainer2/SubViewport/HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)

[node name="Health" type="Label" parent="VBoxContainer/SubViewportContainer2/SubViewport/HUD"]
offset_left = 48.0
offset_top = 259.0
offset_right = 138.0
offset_bottom = 304.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_xpi2j")
vertical_alignment = 2

[connection signal="coin_collected" from="VBoxContainer/SubViewportContainer/SubViewport/FPSPlayer" to="VBoxContainer/SubViewportContainer/SubViewport/HUD" method="_on_coin_collected"]
[connection signal="health_updated" from="VBoxContainer/SubViewportContainer/SubViewport/FPSPlayer" to="VBoxContainer/SubViewportContainer/SubViewport/HUD" method="_on_health_updated"]
[connection signal="killed_by_damage" from="VBoxContainer/SubViewportContainer/SubViewport/FPSPlayer" to="ScoreHUD" method="_on_killed_by_damage"]
[connection signal="body_entered" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D" method="_on_body_entered"]
[connection signal="body_exited" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D" method="_on_body_exited"]
[connection signal="body_entered" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D2" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D2" method="_on_body_entered"]
[connection signal="body_exited" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D2" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D2" method="_on_body_exited"]
[connection signal="body_entered" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D3" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D3" method="_on_body_entered"]
[connection signal="body_exited" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D3" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D3" method="_on_body_exited"]
[connection signal="body_entered" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D4" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D4" method="_on_body_entered"]
[connection signal="body_exited" from="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D4" to="VBoxContainer/SubViewportContainer/SubViewport/SpawnPoints/Node3D4" method="_on_body_exited"]
[connection signal="coin_collected" from="VBoxContainer/SubViewportContainer2/SubViewport/FPSPlayer 2" to="VBoxContainer/SubViewportContainer2/SubViewport/HUD" method="_on_coin_collected"]
[connection signal="health_updated" from="VBoxContainer/SubViewportContainer2/SubViewport/FPSPlayer 2" to="VBoxContainer/SubViewportContainer2/SubViewport/HUD" method="_on_health_updated"]
[connection signal="killed_by_damage" from="VBoxContainer/SubViewportContainer2/SubViewport/FPSPlayer 2" to="ScoreHUD" method="_on_killed_by_damage"]
